# Topic1-22

./: README.md
Topic 1/: CMakeLists.txt  main.cpp  main_o.cpp
Topic 10/: a.tex
Topic 11/: CMakeLists.txt
Topic 11/code/: CMakeLists.txt  epipolar.cpp
Topic 11/作业11-CarBO/: epipolar.cpp
Topic 12/: virtual-billboard.cpp
Topic 12/answer/: CMakeLists.txt  virtual-billboard.cpp
Topic 12/clockwise_order/: note.txt
Topic 12/单应矩阵/: virtual-billboard.cpp
Topic 13/: README.md  notes.txt
Topic 13/practice_pointCloudFusion_diy/: CMakeLists.txt
Topic 14/点云滤波练习题目/: CMakeLists.txt  cloud_filtered.pcd  noise.pcd
Topic 17/练习17-g2o顶点代码框架/: BA-3Dto2D.cpp  CMakeLists.txt
Topic 18/18-g2o/: directBA.cpp
Topic 18/练习18-g2o边代码参考结果/: directBA.cpp
Topic 18/练习18-g2o边代码框架/: directBA.cpp
Topic 19/: a.aux  a.tex
Topic 2/: CMakeLists.txt  main.cpp
Topic 20/: notes.txt
Topic 20/作业20-Charon/: CMakeLists.txt  icp.cpp
Topic 20/作业20-ICP应用实践-代码框架/: CMakeLists.txt  icp.cpp
Topic 21/作业21-四元数插值-代码框架/: slerpQuaternion.cpp
Topic 21/作业21-四元数插值-参考答案/: slerpQuaternion.cpp
Topic 22/: a.aux  a.tex
Topic 3/: CMakeLists.txt  main.cpp  main_o.cpp
Topic 4/: homework.aux  homework.nav  homework.tex
Topic 5/: CMakeLists.txt  rotationTransforms.cpp  test.cpp
Topic 6/: 作业六-CarBO.aux  作业六-CarBO.tex
Topic 7/: 作业七-CarBO.aux  作业七-CarBO.tex  作业七-CarBO.toc
Topic 8/: CMakeLists.txt  draw_trajectory.cpp
Topic 8/作业8-小六/: CMakeLists.txt  PlotTrajectory.cpp  trajectory.txt
Topic 8/绘制轨迹/: draw_trajectory.cpp
Topic 9/: undistort_image.cpp
(+8 files in other folders)
